# neurosymbolic-vqa

./: .gitattributes  .gitignore  BLOCKED.md  LICENSE  PHASE_4_CLEANUP.md  PHASE_4_REVIEW.md  PHASE_4_TUNING.md  README.md  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt
.github/workflows/: ci.yml
demo/: app.py  requirements.txt
demo/cached_scenes/: CLEVR_val_000000.json  CLEVR_val_000001.json  CLEVR_val_000002.json  CLEVR_val_000003.json  CLEVR_val_000004.json
docs/: DEPLOY_SPACES.md  INDEX.md  PHASE_2_REVIEW.md  PHASE_3_REVIEW.md  PHASE_4_RESULTS.md  PHASE_4_TUNING.md  PHASE_5A_REVIEW.md  PHASE_5B_REVIEW.md  PHASE_5F_REQUIREMENTS_SPLIT.md  PHASE_5G_LAZY_IMPORTS.md  PHASE_5H_SPACES_BIND_FIX.md  PHASE_5I_RESOLUTION.md  PHASE_5_DEMO_DEBUG.md  PHASE_5_SUMMARY.md
evaluation/: __init__.py  clevr_subset.py  cli.py  golden_dataset.py  harness.py
evaluation/results/: clevr_baseline_v1.json  clevr_baseline_v2_after_clip_tuning.json  synthetic_llama32_3b_baseline.json
kb_generator/: generator.py  templates.py  validator.py
nl2prolog/: __init__.py  local_backend.py  openai_backend.py  prompt_templates.py  schema_builder.py  translator.py
query_executor/: executor.py  result.py
scene_extractor/: __init__.py  attribute_classifier.py  config.py  extractor.py  models.py  schema.py  spatial_relations.py
scripts/: README.md  download_clevr.sh  download_models.sh  precompute_clevr_scenes.py  run_eval.sh
synthetic/: presets.py  scene_builder.py
tests/: conftest.py  test_eval.py  test_kb_generator.py  test_nl2prolog.py  test_query_executor.py  test_scene_extractor.py  test_spatial_relations.py  test_synthetic.py
tests/fixtures/: synth_image.py
tests/integration/: test_ollama_live.py
verbalizer/: verbalizer.py
